--- a/SignUp/src/app/view-meeting/view-meeting.component.html
+++ b/SignUp/src/app/view-meeting/view-meeting.component.html
@@ -1,4 +1,7 @@
 
+    <app-univabout>
+
+    </app-univabout>
     
 <div class="container">
     <button type="button" class="btn btn-outline-danger">New Meeting</button>
