--- a/SignUp/src/app/dashboard/dashboard.component.html
+++ b/SignUp/src/app/dashboard/dashboard.component.html
@@ -26,7 +26,7 @@
 
                             <mat-card-actions>
                                    <div class="text-center">
-                                          <button mat-button mat-raised-button class="btn-info"
+                                          <button mat-button mat-raised-button class="btn-warning"
                                            style="width : 9em;" routerLink="../create-task-dashboard">create-task </button>
                                           <button mat-button class="btn-primary" (click)="fun()">Like</button>
 
@@ -44,7 +44,7 @@
        
                                    <mat-card-actions>
                                           <div class="text-center">
-                                                 <button mat-button mat-raised-button class="btn-info"
+                                                 <button mat-button mat-raised-button class="btn-warning"
                                                         style="width : 9em;" routerLink="../create-meeting-dashboard">create-meeting</button>
                                                  <button mat-button class="btn-primary" (click)="fun()">Like</button>
        
@@ -52,7 +52,9 @@
                                    </mat-card-actions>
                             </div>
                             <div class="div3">  <P> <mat-icon>assignment</mat-icon>  HOW TO VIEW TASK?</P> 
-                                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo perspiciatis provident hic eos totam accusantium corporis mollitia id! Temporibus laboriosam nemo culpa alias quis minus explicabo distinctio eaque! Modi, delectus!</p>
+                                   <p>1. You can use the cursor to click the [Task View] icon on the taskbar①, or press the Windows logo key + tab key on the keyboard to run “Task View”. </p>
+                                          
+                                   <p> 2. In Task View, it will list all current windows you are using of the desktop on the top side, and you can select any to quickly open②.</p>
 
                                    <mat-card-content>
                                           <p>
@@ -71,8 +73,9 @@
 
                             </div>
                             <div class="div4"> <P> <P> <mat-icon>assignment</mat-icon> HOW TO VIEW MEETINGS?</P> 
-                                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo perspiciatis provident hic eos totam accusantium corporis mollitia id! Temporibus laboriosam nemo culpa alias quis minus explicabo distinctio eaque! Modi, delectus!</p>
-
+                                   <p>1. You can use the cursor to click the [Task View] icon on the taskbar①, or press the Windows logo key + tab key on the keyboard to run “Task View”. </p>
+                                          
+                                   <p> 2. In Task View, it will list all current windows you are using of the desktop on the top side, and you can select any to quickly open②.</p>
                                    <mat-card-content>
                                           <p>
                                                  Thankyou For Reading.
@@ -81,7 +84,7 @@
        
                                    <mat-card-actions>
                                           <div class="text-center">
-                                                 <button mat-button mat-raised-button class="btn-info"
+                                                 <button mat-button mat-raised-button class="btn-success "
                                                         style="width : 9em;" routerLink="../view-meeting">view-meeting </button>
                                                  <button mat-button class="btn-primary" (click)="fun()">Like</button>
        
