get-task service updated

--- a/SignUp/src/app/view-task/view-task.component.html
+++ b/SignUp/src/app/view-task/view-task.component.html
@@ -13,7 +13,7 @@
       </tr>
       </thead>
       <tbody class="table-text"> 
-      <tr *ngFor="let task of tasks">
+      <tr *ngFor="let task of listTasks">
         <td><span>{{task.taskid}}</span></td>
         <td><span>{{task.title}}</span></td>
         <td><span>{{task.description}}</span></td>
