--- a/SignUp/src/app/dashboard/dashboard.component.html
+++ b/SignUp/src/app/dashboard/dashboard.component.html
@@ -15,9 +15,32 @@
                      <main >
 
                             <div class="div1">  <P> <mat-icon>edit</mat-icon> HOW TO CREATE TASK ?   </P> 
+                                   
+                                   <ul style="margin: 15px; padding: 10px;" >
 
-                                   <p> 1. Select New Items > Task or press Ctrl+Shift+K. </p>
+                                
+                                          <li>
+                                                 Add task title.
+                                          </li>
+                                          <li>
+                                                 Set a start date and time and due date and time.
+                                          </li>
+              
+                                          <li>
+                                                 Add Task Description. 
+                                          </li>
 
+                                          <li>      
+                                                Click on create and add more people.
+                                          </li>
+
+                                          <li>      
+                                                 You are good to go.       
+                                          </li>
+
+                                   </ul>                  
+                                         
+       
                             <mat-card-content>
                                    <p>
                                           Thankyou For Reading.
@@ -35,7 +58,34 @@
 
                             </div>
                             <div class="div2">  <P> <mat-icon>edit</mat-icon> HOW TO CREATE MEETINGS?</P> 
-                                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo perspiciatis provident hic eos totam accusantium corporis mollitia id! Temporibus laboriosam nemo culpa alias quis minus explicabo distinctio eaque! Modi, delectus!</p>
+
+                                   <ul style="margin: 15px; padding: 10px;" >
+
+                                
+                                          <li>
+                                                 Add meeting title.
+                                          </li>
+                                          
+                                          <li>
+                                                 Enter place value.
+                                          </li>
+                                          <li>
+                                                 Set a start date and time and due date and time.
+                                          </li>
+              
+                                          <li>
+                                                 Add meeting description. 
+                                          </li>
+
+                                          <li>      
+                                                Click on create and add more people
+                                          </li>
+
+                                          <li>      
+                                                You are good to go.
+                                          </li>
+
+                                   </ul>   
                                    <mat-card-content>
                                           <p>
                                                  Thankyou For Reading.
@@ -52,9 +102,9 @@
                                    </mat-card-actions>
                             </div>
                             <div class="div3">  <P> <mat-icon>assignment</mat-icon>  HOW TO VIEW TASK?</P> 
-                                   <p>1. You can use the cursor to click the [Task View] icon on the taskbar①, or press the Windows logo key + tab key on the keyboard to run “Task View”. </p>
+                                   <p>1. You can use the cursor to click the Task View icon on the sidenav bar to run “Task View”. </p>
                                           
-                                   <p> 2. In Task View, it will list all current windows you are using of the desktop on the top side, and you can select any to quickly open②.</p>
+                                   <p> 2. In Task View, it will list all current windows you are using of the desktop on the top side, and you can select any to quickly open.</p>
 
                                    <mat-card-content>
                                           <p>
@@ -73,9 +123,9 @@
 
                             </div>
                             <div class="div4"> <P> <P> <mat-icon>assignment</mat-icon> HOW TO VIEW MEETINGS?</P> 
-                                   <p>1. You can use the cursor to click the [Task View] icon on the taskbar①, or press the Windows logo key + tab key on the keyboard to run “Task View”. </p>
+                                   <p>1. You can use the cursor to click the Meeting View icon on the sidenav bar to run "Meeting View”. </p>
                                           
-                                   <p> 2. In Task View, it will list all current windows you are using of the desktop on the top side, and you can select any to quickly open②.</p>
+                                   <p> 2. In Meeting View, it will list all current windows you are using of the desktop on the top side, and you can select any to quickly open.</p>
                                    <mat-card-content>
                                           <p>
                                                  Thankyou For Reading.
