--- a/SignUp/src/app/sidenav/sidenav.component.html
+++ b/SignUp/src/app/sidenav/sidenav.component.html
@@ -12,22 +12,23 @@
     <mat-icon>home</mat-icon>Home   </a>
 
     <a mat-list-item routerLink="../aboutpage" routerLinkActive="list-item-active">
-    <mat-icon>dashboard</mat-icon>About  </a>
+        <mat-icon>supervised_user_circle</mat-icon>About  </a>
 
     <a mat-list-item routerLink="../create-task-dashboard" routerLinkActive="list-item-active">
     <mat-icon >edit</mat-icon>Create Task </a>
 
     <a mat-list-item routerLink="../view-task" routerLinkActive="list-item-active">
-    <mat-icon>photo_library</mat-icon> View Task   </a>
+    	<mat-icon>assignment</mat-icon>View Task   </a>
 
     <a mat-list-item routerLink="/create-meeting-dashboard" routerLinkActive="list-item-active">
     <mat-icon>edit</mat-icon>Create Meetings </a>
 
     <a mat-list-item routerLink="/view-meeting" routerLinkActive="list-item-active">
-    <mat-icon> local_post_office</mat-icon>View Meetings </a>
-
+        <mat-icon>assignment</mat-icon>View Meetings </a>
+        
+<!-- 
     <a mat-list-item routerLink="/home" routerLinkActive="list-item-active">
-    <mat-icon> settings</mat-icon>Settings</a>
+    <mat-icon> settings</mat-icon>Settings</a> -->
 
 
 </mat-nav-list>
