--- a/SignUp/src/app/univabout/univabout.component.html
+++ b/SignUp/src/app/univabout/univabout.component.html
@@ -6,9 +6,23 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarNav">
+
       <ul class="navbar-nav">
+
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="../aboutpage"> About Us</a>
+        </li>
+
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="../create-task-dashboard"> Create Task </a>
+        </li>
+        
         <li class="nav-item active">
           <a class="nav-link" routerLink="../view-task"> View Task </a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" routerLink="../create-meeting-dashboard">Create Meeting</a>
         </li>
 
         <li class="nav-item">
@@ -21,9 +35,9 @@
 
     
         <form class="form-inline">
-        <button class="btn btn-danger" >
+        <button class="btn btn-danger" style="height: 35px;" >
             <li class="nav-item" >
-                <a class="nav-link" routerLink="../login" style="color: white;" >Logout</a>
+                <a class="nav-link" routerLink="../login" style="color: white; padding: 2px; " >Logout</a>
               </li>
           </button>
           
