--- a/SignUp/src/app/aboutpage/aboutpage.component.html
+++ b/SignUp/src/app/aboutpage/aboutpage.component.html
@@ -6,8 +6,17 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
+
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="../create-task-dashboard"> Create Task </a>
+        </li>
+        
         <li class="nav-item active">
           <a class="nav-link" routerLink="../view-task"> View Task </a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" routerLink="../create-meeting-dashboard">Create Meeting</a>
         </li>
 
         <li class="nav-item">
@@ -18,11 +27,15 @@
           <a class="nav-link" href="#"></a>
         </li>
 
+        <li class="nav-item">
+          <a class="nav-link" href="#"></a>
+        </li>
+
     
         <form class="form-inline">
-        <button class="btn btn-warning" >
+        <button class="btn btn-danger" style="height: 35px;"  >
             <li class="nav-item" >
-                <a class="nav-link" routerLink="../login">Login</a>
+                <a class="nav-link" routerLink="../login" style="color: white; padding: 2px;">Logout</a>
               </li>
           </button>
           
@@ -39,8 +52,15 @@
 
     <div class="div1">
         
-   <p style="padding: 100px; margin: 10px; color: white; ">  Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio molestiae quam expedita amet dolorum recusandae eos maxime. Nihil, quia rerum. Atque dolorum nesciunt fugiat est magnam, sed repudiandae maxime aperiam quasi officiis possimus beatae recusandae. Vero quisquam vel eaque at inventore, itaque ullam velit odio aliquid asperiores quos maxime! Fugiat omnis maxime rem delectus animi fugit, eveniet quos, ab excepturi, dolorem ratione incidunt consequuntur dolores illo voluptatum perferendis provident corrupti sequi et aut. Maiores odio in hic aliquid, amet sunt recusandae nesciunt earum eos aspernatur magnam accusamus qui. Deleniti reiciendis, accusamus ipsa illo distinctio doloremque rerum perspiciatis dolore ipsam natus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem doloribus praesentium inventore modi sapiente vitae magni possimus placeat esse adipisci quod voluptas, officia, natus neque laborum facere cupiditate? Doloremque, quisquam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+   <h1 style="padding: 100px; margin: 10px; color: rgb(255, 255, 255); ">  We power the momentum of modern talent-focused enterprises </h1>
+      <h2 style="color: white;" >We are the momentum that powers your growth</h2>
 
+   <p  style="padding: 1px;  color: rgb(255, 255, 255); " >
+
+    Today, with our comprehensive platform ,we serve over 50+ top enterprises across Asia Pacific and power seamless employee experience over thousands of devices.
+    Our technology is a reflection of the growing needs of modern, talent-focused enterprises and their increasingly complex HR use cases; of people and business leaders who want technology to do more. We are on a mission to power the Talent Economy with our Tech.
+
+   </p>
     </div>
 
     <div class="div2">
