updated Components and create update-meeting

--- a/SignUp/src/app/sidenav/sidenav.component.html
+++ b/SignUp/src/app/sidenav/sidenav.component.html
@@ -21,10 +21,10 @@
     	<mat-icon>assignment</mat-icon>View Task   </a>
 
     <a mat-list-item routerLink="/create-meeting-dashboard" routerLinkActive="list-item-active">
-    <mat-icon>edit</mat-icon>Create Meetings </a>
+    <mat-icon>edit</mat-icon>Create Meeting </a>
 
     <a mat-list-item routerLink="/view-meeting" routerLinkActive="list-item-active">
-        <mat-icon>assignment</mat-icon>View Meetings </a>
+        <mat-icon>assignment</mat-icon>View Meeting </a>
         
 <!-- 
     <a mat-list-item routerLink="/home" routerLinkActive="list-item-active">
