--- a/SignUp/src/app/aboutpage/aboutpage.component.html
+++ b/SignUp/src/app/aboutpage/aboutpage.component.html
@@ -8,6 +8,10 @@
       <ul class="navbar-nav">
 
         <li class="nav-item active">
+          <a class="nav-link" routerLink="aboutpage"> About Us</a>
+        </li>
+
+        <li class="nav-item active">
           <a class="nav-link" routerLink="../create-task-dashboard"> Create Task </a>
         </li>
         
