--- a/SignUp/src/app/dashboard/dashboard.component.html
+++ b/SignUp/src/app/dashboard/dashboard.component.html
@@ -101,6 +101,7 @@
                                           </div>
                                    </mat-card-actions>
                             </div>
+
                             <div class="div3">  <P> <mat-icon>assignment</mat-icon>  HOW TO VIEW TASK?</P> 
                                    <p>1. You can use the cursor to click the Task View icon on the sidenav bar to run “Task View”. </p>
                                           
@@ -122,10 +123,12 @@
                                    </mat-card-actions>
 
                             </div>
-                            <div class="div4"> <P> <P> <mat-icon>assignment</mat-icon> HOW TO VIEW MEETINGS?</P> 
-                                   <p>1. You can use the cursor to click the Meeting View icon on the sidenav bar to run "Meeting View”. </p>
+
+                            <div class="div3">  <P> <mat-icon>assignment</mat-icon>  HOW TO VIEW MEETINGS?</P> 
+                                   <p>1. You can use the cursor to click the Task Meeting icon on the sidenav bar to run "Meeting View”. </p>
                                           
                                    <p> 2. In Meeting View, it will list all current windows you are using of the desktop on the top side, and you can select any to quickly open.</p>
+
                                    <mat-card-content>
                                           <p>
                                                  Thankyou For Reading.
@@ -134,15 +137,14 @@
        
                                    <mat-card-actions>
                                           <div class="text-center">
-                                                 <button mat-button mat-raised-button class="btn-success "
-                                                        style="width : 9em;" routerLink="../view-meeting">view-meeting </button>
+                                                 <button mat-button mat-raised-button  class="btn btn-success"
+                                                        style="width : 9em;" routerLink="../view-meeting"  >view-meeting</button>
                                                  <button mat-button class="btn-primary" (click)="fun()">Like</button>
        
                                           </div>
                                    </mat-card-actions>
-                                   
-                            </div>
 
+                            </div>
                      </main>
                      
               </router-outlet>
