--- a/SignUp/src/app/update-meeting/update-meeting.component.html
+++ b/SignUp/src/app/update-meeting/update-meeting.component.html
@@ -3,7 +3,7 @@
 <mat-card class="card">
     <div class="row">
         <mat-form-field class="half-row" appearance="outline">
-            <mat-label>Task Title</mat-label>
+            <mat-label>Meeting Title</mat-label>
             <input matInput type="text" placeholder="Enter Task Name" required>
         </mat-form-field>
     
