--- a/SignUp/src/app/univabout/univabout.component.html
+++ b/SignUp/src/app/univabout/univabout.component.html
@@ -29,15 +29,15 @@
           <a class="nav-link" routerLink="../view-meeting">View Meeting</a>
         </li>
 
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="#"></a>
-        </li>
+        </li> -->
 
     
         <form class="form-inline">
         <button class="btn btn-danger" style="height: 35px;" >
             <li class="nav-item" >
-                <a class="nav-link" routerLink="../login" style="color: white; padding: 2px; " >Logout</a>
+                <a  id="lbtn" class="nav-link" routerLink="../login" style="color: white; padding: 2px; " >Logout</a>
               </li>
           </button>
           
