--- a/SignUp/src/app/update-task/update-task.component.html
+++ b/SignUp/src/app/update-task/update-task.component.html
@@ -62,6 +62,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
+          <app-add-people></app-add-people>
            <div><h4>Select Users</h4></div>
            <ul class="list-group">
             <li class="list-group-item">
