add-user component added

--- a/SignUp/src/app/update-task/update-task.component.html
+++ b/SignUp/src/app/update-task/update-task.component.html
@@ -49,7 +49,7 @@
 <div class="row">
 
         <!-- Button trigger modal -->
- <button type="button" id="addUsers" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal1" >
+ <button type="button" id="addUsers" class="btn btn-primary"   routerLink="../add-user">
     Add User
  </button>
   
@@ -141,7 +141,9 @@
       </div>
     </div>
   </div>
-
+  <button type="button" id="updateDetails" class="btn btn-success"   >
+    Update Details
+ </button>
   
 
 </div>
