reset-password added, view-task updated

--- a/SignUp/src/app/header/header.component.html
+++ b/SignUp/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary" style="height:fit-content;" >  
-   <span style="justify-content: center; text-align: center; margin:0px;">DASHBOARD</span>
+   <span style="justify-content: center; text-align: center; margin:0px; height: 0px;" ></span>
     <mat-toolbar-row class="justify-content-between" >
         <button mat-icon-button (click)="togglesSidebar()">  <mat-icon> menu </mat-icon> </button>
         <div class="row mr-2 ml-auto" >
