--- a/SignUp/src/app/dashboard/dashboard.component.css
+++ b/SignUp/src/app/dashboard/dashboard.component.css
@@ -21,7 +21,7 @@ mat-drawer-container{
 .content{
     /* padding: 5px; */
     margin-top: 5px;
-    height: 500px;
+    height: 400px;
     width:  450px;
     display: flex;
     flex-direction: column;
@@ -57,7 +57,10 @@ main{
 .div1{
     /* background-color: rgb(236, 236, 219); */
     border: 1px solid black;
-    
+    border-radius: 7px;
+    box-shadow: 1ch;
+    box-shadow: 0 0 20px rgba(139, 157, 235, 0.3);
+
     /* grid-column: 1; */
 }
 
@@ -65,14 +68,26 @@ main{
   
     /* background-color: rgb(236, 236, 219); */
     border: 1px solid black;
+    border-radius: 7px;
+    box-shadow: 0 0 20px rgba(139, 157, 235, 0.3);
+
+
 }
 
 .div3{
     /* background-color: rgb(236, 236, 219); */
     border: 1px solid black;
+    border-radius: 7px;
+    box-shadow: 0 0 20px rgba(139, 157, 235, 0.3);
+
+
 }
 
 .div4{
   
     border: 1px solid black;
+    border-radius: 7px;
+    box-shadow: 0 0 20px rgba(139, 157, 235, 0.3);
+
+
 }
