--- a/SignUp/src/app/view-meeting/view-meeting.component.html
+++ b/SignUp/src/app/view-meeting/view-meeting.component.html
@@ -190,6 +190,6 @@
       </tr>
       </tbody>
     </table>
-    <button type="button" class="btn btn-outline-danger">New Meeting</button>
+    <button type="button" class="btn btn-outline-danger" routerLink="../create-meeting-dashboard">New Meeting</button>
   </div>
 </mat-tab>
