--- a/SignUp/src/app/reset-password/reset-password.component.html
+++ b/SignUp/src/app/reset-password/reset-password.component.html
@@ -4,19 +4,11 @@
   
     <mat-card fxFlex="30">
   
-      <mat-toolbar fxLayoutAlign="center center" color="primary"> Reset Password</mat-toolbar>
+      <mat-toolbar fxLayoutAlign="center center" color="primary" style="height: 38px;"> Reset Password</mat-toolbar>
   
-      <form  fxLayoutAlign="stretch" fxLayout="column" class="mytask">
+      <form  fxLayoutAlign="stretch" fxLayout="column" style="border: 0cm;" class="mytask">
   
-        <mat-form-field appearance="fill">
-          <mat-label>Username</mat-label>
-          <input  name = "firstName" matInput type="text" placeholder="Username" >
-        </mat-form-field>
-  
-        <mat-form-field appearance="fill">
-          <mat-label> Current Password </mat-label>
-          <input name = "Current-password" matInput type="password" placeholder="Current Password" >
-        </mat-form-field>
+       
   
         <mat-form-field appearance="fill">
           <mat-label> New Password</mat-label>
@@ -35,7 +27,7 @@
       
   
       <p id="para">Already have an account?</p>
-      <a id="para" routerLink="../login" >login</a> 
+      <a id="para" routerLink="../login" >Login</a> 
   
     </mat-card>
   
