--- a/SignUp/src/app/forgot-password/forgot-password.component.css
+++ b/SignUp/src/app/forgot-password/forgot-password.component.css
@@ -1,9 +1,10 @@
 #para{
     color: #8A39E1;
-    margin: 2px;
-    display: block;
-    text-align: center;
+    margin: 4px;
+    /* display: block; */
+    text-align:left;
     justify-content:center ;
+    padding-bottom: 5px;
 }
 
 .main-div{
@@ -12,9 +13,7 @@
     color:black;
     font-weight: bolder;
 }
-.mytask{
-    border: 0ch;
-}
+
 
 .img{
     background-image: url("../../assets/bg.png");  
