--- a/SignUp/src/app/update-task/update-task.component.html
+++ b/SignUp/src/app/update-task/update-task.component.html
@@ -1,17 +1,18 @@
 <app-univabout></app-univabout>
 
 <mat-card class="card">
+  
     <div class="row">
         <mat-form-field class="half-row" appearance="outline">
             <mat-label>Task Title</mat-label>
-            <input matInput type="text" placeholder="Enter Task Name" required>
+            <input matInput type="text" [(ngModel)]="task_title" placeholder="Enter Task Name" required>
         </mat-form-field>
     
 
    
         <mat-form-field class="half-row" appearance="outline">
             <mat-label>Description</mat-label>
-            <input matInput type="text" placeholder="Enter Description" required>
+            <input matInput type="text" [(ngModel)]="description" placeholder="Enter Description" required>
         </mat-form-field>
     </div>
     <div class="row">
@@ -19,14 +20,14 @@
             <mat-form-field class="half-row" style="margin-right: 10px;" color="accent"
                 appearance="fill">
                 <mat-label>Start Date</mat-label>
-                <input matInput [matDatepicker]="picker1">
+                <input matInput [matDatepicker]="picker1" [(ngModel)]="start_date">
                 <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
                 <mat-datepicker #picker1></mat-datepicker>
             </mat-form-field>
 
             <mat-form-field class="half-row" appearance="fill">
                 <mat-label>start time</mat-label>
-                <input matInput type="time" placeholder="Enter start time">
+                <input matInput type="time" placeholder="Enter start time" [(ngModel)]="start_time">
             </mat-form-field>
         </div>
         <div class="col">
@@ -34,14 +35,14 @@
             <mat-form-field class="half-row" style="margin-right: 10px;" color="accent"
                 appearance="fill">
                 <mat-label>Due Date</mat-label>
-                <input matInput [matDatepicker]="picker2">
+                <input matInput [matDatepicker]="picker2" [(ngModel)]="due_date">
                 <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
                 <mat-datepicker #picker2 color="primary"></mat-datepicker>
             </mat-form-field>
 
             <mat-form-field class="half-row" appearance="fill">
                 <mat-label>due time</mat-label>
-                <input matInput type="time" placeholder="Enter due time">
+                <input matInput type="time" placeholder="Enter due time" [(ngModel)]="due_time">
             </mat-form-field>
         </div>
     </div>
@@ -141,7 +142,7 @@
       </div>
     </div>
   </div>
-  <button type="button" id="updateDetails" class="btn btn-success"   >
+  <button type="button" id="updateDetails" class="btn btn-success" (click)="updateDetails()"  >
     Update Details
  </button>
   
