--- a/SignUp/src/app/aboutpage/aboutpage.component.css
+++ b/SignUp/src/app/aboutpage/aboutpage.component.css
@@ -15,7 +15,7 @@ button{
 
 main{
     
-    background-color: blue;
+    background-color: white;
     height: 100vh; 
     opacity: 0.7; 
     display: grid; color: black;
@@ -28,5 +28,56 @@ main{
 a:hover{
     background-color: blue;
 }
+
+
+
+:host{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  
+}
+
+mat-drawer{
+    width: 260px;
+    background: rgb(255, 255, 255);
+    /* background-color: white; */
+    
+}
+
+mat-drawer-container{
+    height: 100%;
+}
+
+
+.content{
+    /* padding: 5px; */
+    margin-top: 5px;
+    height: 400px;
+    width:  450px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    
+    
+}
+
+p {
+    padding: 10px;
+}
+
+/* */
+
+/* *{
+    margin: 0 ; padding: 0; 
+    box-sizing: border-box;
+    /* background: red; 
+}*/
+
+
+
+
+
+
 
 
