--- a/SignUp/src/app/create-meeting-dashboard/create-meeting-dashboard.component.css
+++ b/SignUp/src/app/create-meeting-dashboard/create-meeting-dashboard.component.css
@@ -36,3 +36,46 @@
 }   */
 
 
+:host{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+
+}
+
+mat-drawer{
+  width: 260px;
+  background: rgb(255, 255, 255);
+  /* background-color: white; */
+  
+}
+
+mat-drawer-container{
+  height: 100%;
+}
+
+
+.content{
+  /* padding: 5px; */
+  margin-top: 5px;
+  height: 400px;
+  width:  450px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  
+  
+}
+
+p {
+  padding: 10px;
+}
+
+
+
+*{
+  margin: 0 ; padding: 0; 
+  box-sizing: border-box;
+  /* background: red; */
+}
+
