--- a/SignUp/src/app/createmeeting/createmeeting.component.css
+++ b/SignUp/src/app/createmeeting/createmeeting.component.css
@@ -87,3 +87,59 @@
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+
+:host{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+
+}
+
+mat-drawer{
+  width: 260px;
+  background: rgb(255, 255, 255);
+  /* background-color: white; */
+  
+}
+
+mat-drawer-container{
+  height: 100%;
+}
+
+
+.content{
+  /* padding: 5px; */
+  margin-top: 5px;
+  height: 400px;
+  width:  450px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  
+  
+}
+
+p {
+  padding: 10px;
+}
+
+/* */
+
+*{
+  margin: 0 ; padding: 0; 
+  box-sizing: border-box;
+  /* background: red; */
+}
+
+main{
+  /* width: 90%; */
+  height: 100%;
+  /* margin: 50px auto; */
+  padding: 10px;
+  
+  display: grid ; color: black;
+  grid-template-rows: 350px 350px 350px 350px ;
+  grid-template-columns: repeat(2 , 1fr) ;
+  grid-gap: 12px;
+}
+
