--- a/SignUp/src/app/sidenav/sidenav.component.html
+++ b/SignUp/src/app/sidenav/sidenav.component.html
@@ -8,7 +8,7 @@
 
     <h2 matSubheader class="mt-2" >APPLICATIONS</h2>
 
-    <a mat-list-item routerLink="./dashboard" routerLinkActive="list-item-active">
+    <a mat-list-item routerLink="../dashboard" routerLinkActive="list-item-active">
     <mat-icon>home</mat-icon>Home   </a>
 
     <a mat-list-item routerLink="../aboutpage" routerLinkActive="list-item-active">
@@ -32,3 +32,5 @@
 
 
 </mat-nav-list>
+
+<router-outlet></router-outlet>
