--- a/SignUp/src/app/view-meeting/view-meeting.component.html
+++ b/SignUp/src/app/view-meeting/view-meeting.component.html
@@ -1,3 +1,20 @@
+<mat-drawer-container>
+
+  <mat-drawer mode="side" [opened]="sideBarOpen">
+         <!-- <mat-drawer mode="side" opened="true"> -->
+         <app-sidenav> </app-sidenav>
+  </mat-drawer>
+
+  <mat-drawer-content>
+
+         <app-header (toggleSidebarForMe)="sideBarToggler()">
+         </app-header>
+        
+     <router-outlet>
+
+      
+    
+
 <mat-tab-group mat-align-tabs="center" >
   <!-- #enddocregion align-start -->
     <mat-tab label="All meetings" style="font-size: large;" class="label">
@@ -193,3 +210,6 @@
     <button type="button" class="btn btn-outline-danger" routerLink="../create-meeting-dashboard">New Meeting</button>
   </div>
 </mat-tab>
+
+
+<router-outlet></router-outlet>
