add  header comp in add user

--- a/SignUp/src/app/add-user/add-user.component.css
+++ b/SignUp/src/app/add-user/add-user.component.css
@@ -75,3 +75,31 @@
     margin-top: 35px;
   }
   
+
+
+:host{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+
+}
+
+mat-drawer{
+  width: 260px;
+  background: rgb(255, 255, 255);
+  /* background-color: white; */
+  
+}
+
+mat-drawer-container{
+  height: 100%;
+}
+
+
+
+
+
+
+
+
+
