--- a/SignUp/src/app/add-people/add-people.component.html
+++ b/SignUp/src/app/add-people/add-people.component.html
@@ -1,3 +1,18 @@
+
+<mat-drawer-container>
+
+    <mat-drawer mode="side" [opened]="sideBarOpen">
+           <!-- <mat-drawer mode="side" opened="true"> -->
+           <app-sidenav> </app-sidenav>
+    </mat-drawer>
+
+    <mat-drawer-content>
+
+           <app-header (toggleSidebarForMe)="sideBarToggler()">
+           </app-header>
+           
+           <router-outlet>
+
 <div class="container">
     <div class="row">
         <div class="col">
