--- a/SignUp/src/app/sidenav/sidenav.component.css
+++ b/SignUp/src/app/sidenav/sidenav.component.css
@@ -22,7 +22,8 @@
 }
 
 .mat-list-item{
-    color:rgb(2, 44, 44) !important;
+    /* color:rgb(2, 44, 44) !important; */
+    /* background-color: red; */
     font-size: 1rem;
     /* font-weight: bolder; */
     height: 40px !important;
@@ -33,13 +34,14 @@
 }
 
 a :hover{
-    background:rgb(6, 5, 78)  !important;
+    background-color: yellow;
 }
 
 .list-item-active
 {
 
-    color: #f2f5f7 !important;
+    color: rgb(243, 235, 235) !important;
+    background-color: green;
 
 }
 
@@ -50,3 +52,5 @@ a :hover{
     font-weight:bold;
     letter-spacing: 1px;
 }
+
+
