--- a/SignUp/src/app/dashboard/dashboard.component.css
+++ b/SignUp/src/app/dashboard/dashboard.component.css
@@ -61,6 +61,7 @@ main{
     box-shadow: 1ch;
     box-shadow: 0 0 20px rgba(139, 157, 235, 0.3);
     background-color: #EDFFEC;
+    
 
     /* grid-column: 1; */
 }
@@ -74,7 +75,6 @@ main{
     background-color: #EDFFEC;
 
 
-
 }
 
 .div3{
@@ -84,9 +84,7 @@ main{
     box-shadow: 0 0 20px rgba(139, 157, 235, 0.3);
     background-color: #EDFFEC;
     margin-bottom: 2cm;
-
-
-
+    height: 330px;
 
 }
 
@@ -97,6 +95,7 @@ main{
     box-shadow: 0 0 20px rgba(139, 157, 235, 0.3);
     background-color: #EDFFEC;
     margin-bottom: 2cm;
+    height: 330px;
 
 
 
